internal/test/testdata/fuzz/crashers/e5f9f23edb7a5a72453b16e2abc15113d3da9ee0.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x40 pc=0x13084f7]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileQualifiedTableName(0xc0001f3160, 0xc0001f07e0, 0x14bcde0, 0xc0001d28d0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:318 +0x57
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileDelete(0xc0001f3160, 0xc000414820, 0x0, 0x2, 0xc0002456c3, 0x0, 0xc0000bf968, 0x1364fbe)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:306 +0x1e8
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc0001f3160, 0xc0001ef300, 0x100e4d8, 0x20, 0x13f9c00, 0xc0001ef301)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:62 +0xe77
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc0001f3160, 0xc0001ef300, 0x0, 0x14b9700, 0xc0001f3160, 0x1)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:35 +0x54
github.com/tomarrell/lbadd/internal/test.Fuzz(0x29416000, 0x13, 0x13, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/test/lbadd_fuzz.go:41 +0x383
go-fuzz-dep.Main(0xc0000bff70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/test/go.fuzz.main/main.go:15 +0x52
exit status 2